# cpp-maya-plugins

./: .gitignore  CMakeLists.txt  DummyMain.cpp  LICENSE  readme.md  scrapy.cfg
AbcBullet/: AbcBullet.cpp  AbcBulletStringTable.h  AbcWriteJob.cpp  AbcWriteJob.h  MayaTransformCollectionWriter.cpp  MayaTransformCollectionWriter.h  MayaTransformWriter.cpp  MayaTransformWriter.h
AbcExport/: AbcExport.cpp
AbcImport/: AbcImportStrings.cpp  AbcImportStrings.h  CreateSceneHelper.cpp  CreateSceneHelper.h
MayaPluginForSpreticle/: spReticleLoc.cpp  spReticleLoc.h
MetadataSample/: cmdUtils.h  createMetadataCmd.cpp  createMetadataCmd.h  exportMetadataCmd.cpp  exportMetadataCmd.h  importMetadataCmd.cpp  importMetadataCmd.h  metadataBase.cpp  metadataBase.h  metadataPlugin.cpp  metadataPluginStrings.h  tweakMetadataNode.cpp  tweakMetadataNode.h
MetadataXML/: associationsSerializerXML.cpp  associationsSerializerXML.h  channelSerializerXML.cpp  channelSerializerXML.h  metadataXML.cpp  metadataXML.h  metadataXMLPlugin.cpp  metadataXMLPluginStrings.h  streamSerializerXML.cpp  streamSerializerXML.h  structureSerializerXML.cpp  structureSerializerXML.h
OpenEXR/: OpenEXR.cpp
XmlGeometryCache/: XmlGeometryCache.cpp
XmlGeometryCacheDesc/: XmlGeometryCacheDesc.cpp
affectsNode/: affectsNode.cpp
animCubeNode/: animCubeNode.cpp
animExportUtil/: animExportUtil.cpp  animExportUtil.h  animFileExport.cpp  animFileExport.h
animImportExport/: animFileUtils.cpp  animFileUtils.h  animImportExport.cpp  animImportExport.h
animInfoCmd/: animInfoCmd.cpp
anisotropicShader/: anisotropicShader.cpp
apiDirectionalLightShape/: apiDirectionalLightShape.cpp  (+1 more)
zoomCameraCmd/: CMakeLists.txt  zoomCameraCmd.cpp
(+595 files in other folders)
